--- a/starter/06-Components/05-hero.html
+++ b/starter/06-Components/05-hero.html
@@ -112,9 +112,12 @@
 
         <div class="header-container">
             <h1>A healty meal delivered to your door, every single day</h1>
-            <p>The smart 365-days-per-year food subscription that will make you eat at healthy again. Tailord to your
-                personal tastes and nutritional needs. </p>
-            <a href="#" class="btn">Start eating well</a>
+          <p>
+            The smart 365-days-per-year food subscription that will make you eat
+            at healthy again. Tailord to your personal tastes and nutritional
+            needs.
+          </p>
+          <a href="#" class="btn">Start eating well</a>
         </div>
     </header>
 
