--- a/starter/06-Components/03-table.html
+++ b/starter/06-Components/03-table.html
@@ -43,6 +43,7 @@
 
             /* border: 1px solid gray; */
             border-collapse: collapse;
+            background-color: rgb(62, 66, 71,0.5);
         }
 
         th,
